    * QDM2 audio decoding via lavc
    * cook audio decoding via lavc
    * TrueSpeech audio decoding via lavc
    * CamStudio video decoder via lavc
    * hwmpa pass-through MPEG audio codec
    * tremor updated to libogg 1.1.2
    * PNG decoding via libavcodec
    * removed native RealAudio codecs (ported to lavc)
    * Zip Motion-Block Video (ZMB) decoder via binary DLL

    Demuxers:
    * simultaneous audio capture/playback (-tv immediatemode=0) fixed in v4l2
    * PVR support
    * AAC ADTS demuxer
    * libdvdread updated to v0.9.4
    * support for some more MythTV NUV files
    * modularization of demuxer code
    * MPEG in GXF container support with extension-based detection
    * faster MPEG and much faster GXF demuxing
    * more user-friendly demuxer forcing
    * bug fix for lavc WMA v2 decoder, now all files should be playable
    * MPEG Layer 1 and 2 demuxing fixed
    * pass Vorbis extradata from Matroska container properly
    * DVR format support
    * H.264 ES high profile support
    * TV channel cycling
    * DVD subtitle and audio stream mappings fixed
    * fixed RealAudio demuxing
    * partial support for QuickTime sound atom version 2
    * improved handling of text subs in Matroska files
    * DVD subtitles disabled by default
    * support sipr codec in old RealAudio files

    Streaming:
    * fix streaming of RealAudio files over HTTP
    * show SHOUT/Icecast metadata while playing
    * ultravox (unsv://) streaming support
    * stream code ported to new modular api, massive code cleanup
    * bandwidth selection for Real RTSP streams (for faster stream dumps)

    FFmpeg/libavcodec:
    * Snow bug fixes and speedup
    * MPEG-1/2 decoder speedup
    * Indeo2 (RT21) video decoder
    * Fraps video decoder (v0 & v1)
    * Vorbis audio decoder
    * RV20 fixes
    * VP3 decoder fixes and speedup
    * countless bug fixes all over the place
    * vstrict=-1 is default, Snow, ffv1 etc. need vstrict=-2